<resources>
    <string name="app_name">UI Components</string>
    <string name="this_is_a_text_view">This is a text View</string>
    <string name="agree">Agree</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="hint">hint</string>
    <string name="button">Button</string>
    <string name="play">play</string>
    <string name="this_is_page_two">This is page two</string>
    <string name="item3">item3</string>
    <string name="item2">item2</string>
    <string name="item1">item1</string>
    <string name="item">Item</string>
    <string name="search">Search</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="hello">Hello!</string>

    <string name="Agreement">Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="agree_and_continoue">Agree and Continoue</string>
    <string name="custom_alert">Custom Alert</string>


</resources>
